<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_activity_post_work"
    tools:context="com.example.naeemasghar.clickandhire.ActivityPostWork"
    android:gravity="center_vertical|center_horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:id="@+id/header">

        <ImageView
            android:id="@+id/header_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/cover"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cat_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Post a Project in your City"
                android:textColor="@android:color/white"
                android:textSize="@dimen/backdrop_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Find expert as you want"
                android:textColor="@color/white"
                android:textSize="@dimen/backdrop_subtitle" />

        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/RelativeLayout01"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card_view_summary"
            android:layout_below="@+id/card_view_tag_line"
            android:elevation="3dp"
            android:background="@color/white"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/title_heading"
                    android:clickable="true"
                    android:text="Write a suitable Title"
                    android:gravity="left"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:background="@color/white"
                    android:textColor="@color/profile_text_heading" />
                <EditText
                    android:id="@+id/title"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="0dp"
                    android:background="@color/white"
                    android:hint="@string/hint_title"
                    android:paddingLeft="10dp"
                    android:textSize="12dp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card_view_detail"
            android:layout_below="@+id/card_view_tag_line"
            android:elevation="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_heading"
                    android:clickable="true"
                    android:text="Short Description of Project"
                    android:gravity="left"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:background="@color/white"
                    android:textColor="@color/profile_text_heading" />
                <EditText
                    android:id="@+id/detail"
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:background="@color/white"
                    android:hint="@string/hint_description"
                    android:inputType="text"
                    android:padding="10dp"
                    android:gravity="top"
                    android:textSize="12dp"
                    android:singleLine="false"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card_view_fees"
            android:layout_below="@+id/card_view_tag_line"
            android:elevation="3dp"
            android:background="@color/white"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/summary_heading"
                    android:clickable="true"
                    android:text="Budget of Project"
                    android:gravity="left"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:background="@color/white"
                    android:textColor="@color/profile_text_heading" />
                <EditText
                    android:id="@+id/fees"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/hint_fees"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card_view_city"
            android:layout_below="@+id/card_view_tag_line"
            android:elevation="3dp"
            android:background="@color/white"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/city_heading"
                    android:clickable="true"
                    android:text="Select City"
                    android:gravity="left"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:background="@color/white"
                    android:textColor="@color/profile_text_heading" />
                <Spinner
                    android:id="@+id/city"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:hint="@string/hint_speciality"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textSize="12dp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint">
                </Spinner>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Login Button -->

        <Button
            android:id="@+id/btnPost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/btn_task_bg"
            android:text="@string/btn_post"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white" />

    </LinearLayout>
    </LinearLayout>
</ScrollView>
